add basic css classes to main parents element

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="/assesst/normalize.css">
     <title>Document</title>
 </head>
-<body>
+<body class="body">
     <!-- Header section -->
-    <header>
+    <header class="header-section">
 
     </header>
     <!-- main section -->
-     <section></section>
+     <section class="main-section"></section>
      <!-- footer section -->
-    <footer></footer>
+    <footer class="footer-section"></footer>
 
 
 <script src="/assesst/script.js"></script>
