add fonts in css

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -8,9 +8,11 @@
     <title>Document</title>
 </head>
 <body class="body">
+    <span class="top-head-text">Landing page</span>
+    <span class="top-head-cute-text">International coffee day</span>
     <!-- Header section -->
     <header class="header-section">
-
+        
     </header>
     <!-- main section -->
      <section class="main-section"></section>
