add colors to css root

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -10,15 +10,17 @@
 <body class="body">
     <span class="top-head-text">Landing page</span>
     <span class="top-head-cute-text">International coffee day</span>
+    <!-- main container -->
+<main class="main-container">
     <!-- Header section -->
     <header class="header-section">
-        
+
     </header>
     <!-- main section -->
      <section class="main-section"></section>
      <!-- footer section -->
     <footer class="footer-section"></footer>
-
+</main>
 
 <script src="/assesst/script.js"></script>
 </body>
