give style to background elements

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -10,6 +10,7 @@
 <body class="body">
     <span class="top-head-text">Landing page</span>
     <span class="top-head-cute-text">International coffee day</span>
+    <div class="rectangle-bg-color"></div>
     <!-- main container -->
 <main class="main-container">
     <!-- Header section -->
