coding header HTML structure

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -15,7 +15,22 @@
 <main class="main-container">
     <!-- Header section -->
     <header class="header-section">
-
+        <div class="logo-container">
+            <img src="/assesst/main-page-images/logo.png" alt="logo">
+        </div>
+        <nav class="topic-links-container">
+            <ul class="links-container">
+                <li><a href="" class="link">specialties</a></li>
+                <li><a href="" class="link">delivery</a></li>
+                <li><a href="" class="link">reserve</a></li>
+                <li><a href="" class="link">trending</a></li>
+                <li><a href="" class="link">content</a></li>
+            </ul>
+        </nav>
+        <div class="search-container">
+            <input type="text" placeholder="search" name="search" id="search-input">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
     </header>
     <!-- main section -->
      <section class="main-section"></section>
@@ -23,6 +38,7 @@
     <footer class="footer-section"></footer>
 </main>
 
+<script src="https://kit.fontawesome.com/867ed0792a.js" crossorigin="anonymous"></script>
 <script src="/assesst/script.js"></script>
 </body>
 </html>
