handle part of header section

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -16,7 +16,7 @@
     <!-- Header section -->
     <header class="header-section">
         <div class="logo-container">
-            <img src="/assesst/main-page-images/logo.png" alt="logo">
+            <img  src="/assesst/main-page-images/logo.png" alt="logo">
         </div>
         <nav class="topic-links-container">
             <ul class="links-container">
@@ -26,11 +26,11 @@
                 <li><a href="" class="link">trending</a></li>
                 <li><a href="" class="link">content</a></li>
             </ul>
+            <input type="text" placeholder="search" name="search" id="search-input"> <i class="fa-solid fa-magnifying-glass icon"></i>
         </nav>
-        <div class="search-container">
-            <input type="text" placeholder="search" name="search" id="search-input">
-            <i class="fa-solid fa-magnifying-glass"></i>
-        </div>
+        <!-- <div class="search-container">
+           
+        </div> -->
     </header>
     <!-- main section -->
      <section class="main-section"></section>
