coding main sectiion , add new font and styles

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -33,7 +33,34 @@
         
     </header>
     <!-- main section -->
-     <section class="main-section"></section>
+     <section class="main-section">
+        <div class="main-image"><img src="/assesst/main-page-images/main-pic2.png" alt=""></div>
+        <div class="main-website-info">
+            <h3 class="info-title-cute">special celebration</h3>
+            <h2>international</h2>
+            <h3 class="info-title-normal">coffee day</h3>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi voluptates sapiente fuga. Debitis non perferendis suscipit nihil inventore quam, perspiciatis aspernatur aliquid vitae ea vel impedit quasi temporibus consequatur cupiditate doloribus error voluptate hic et corporis esse molestiae voluptas exercitationem. Inventore quisquam aspernatur sequi, nobis accusantium dolorum animi sunt quaerat.
+            </span>
+            <div class="socials-media">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+            </div>
+
+        </div>
+
+        <div class="products">
+            <div class="product-container">
+                <img class="product-img" src="/assesst/main-page-images/product-image-1-edit.png" alt="">
+                <div class="produc-info">coffee & snacks</div>
+                <div class="product-price"></div>
+            </div>
+            <div class="product-container"></div>
+            <div class="product-container"></div>
+        </div>
+        
+     </section>
      <!-- footer section -->
     <footer class="footer-section"></footer>
 </main>
