add JS folder for animation

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assesst/styles/normalize.css">
     <link rel="stylesheet" href="/assesst/styles/style.css">
+    <link rel="stylesheet" href="/assesst/styles/res.css">
     <title>Document</title>
 </head>
 <body class="body">
@@ -28,6 +29,9 @@
             </ul>
             <div class="search-container">
                 <input type="text" placeholder="search" name="search" id="search-input"><i class="fa-solid fa-magnifying-glass icon"></i>
+            </div>
+            <div class="hamberger-menu">
+                
             </div>
         </nav>
         
