coding menu animation and header responsive for phone

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/assesst/styles/normalize.css">
     <link rel="stylesheet" href="/assesst/styles/style.css">
     <link rel="stylesheet" href="/assesst/styles/res.css">
+    <link rel="stylesheet" href="/assesst/styles/animation.css">
     <title>Document</title>
 </head>
 <body class="body">
@@ -30,9 +31,12 @@
             <div class="search-container">
                 <input type="text" placeholder="search" name="search" id="search-input"><i class="fa-solid fa-magnifying-glass icon"></i>
             </div>
-            <div class="hamberger-menu">
-                
-            </div>
+            <!-- hamberger menu -->
+            <div id="nav-icon1">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
         </nav>
         
     </header>
@@ -133,6 +137,7 @@
 </main>
 
 <script src="https://kit.fontawesome.com/867ed0792a.js" crossorigin="anonymous"></script>
-<script src="/assesst/script.js"></script>
+<script src="/assesst/Js file/script.js"></script>
+<script src="/assesst/Js file/animation.js"></script>
 </body>
 </html>
