finish project for pc version

--- a/assesst/index.html
+++ b/assesst/index.html
@@ -31,13 +31,17 @@
             <div class="search-container">
                 <input type="text" placeholder="search" name="search" id="search-input"><i class="fa-solid fa-magnifying-glass icon"></i>
             </div>
-            <!-- hamberger menu -->
-            <div id="nav-icon1">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
         </nav>
+
+        <div class="side-bar-menu">
+            <ul class="side-bar-container">
+                <li><a href="" class="link">specialties</a></li>
+                <li><a href="" class="link">delivery</a></li>
+                <li><a href="" class="link">reserve</a></li>
+                <li><a href="" class="link">trending</a></li>
+                <li><a href="" class="link">content</a></li>
+            </ul>
+        </div>
         
     </header>
     <!-- main section -->
